--- a/WebBellwether.Web/app/views/managementIntegrationGames.html
+++ b/WebBellwether.Web/app/views/managementIntegrationGames.html
@@ -17,16 +17,66 @@
             <form name="addGame" novalidate ng-submit="newGame(gameModel)">
                 <div class="form-group">
                     <label for="language">{{translation.Language}}</label>
-                    <select id="language" class="form-control" required data-ng-model="gameModel.language" data-ng-change="getGameDescription(gameModel.language.id)" data-ng-options="language.languageName for language in languages">
+                    <select id="language" class="form-control" required data-ng-model="gameModel.language" data-ng-change="getGameFeatureDetails(gameModel.language.id)" data-ng-options="language.languageName for language in languages">
                         <option value=''>{{translation.SelectLanguageForTheGame}}</option>
                     </select>
                 </div>
 
-                trzeba tutaj jeszcze dodać opcje która pozwoli w latwy sposób dodawać gre dla kilku jezykow
+                <div ng-hide="gameModel.language == null">
+                    <!--GAME NAME-->
+                    <input type="text" class="form-control" required data-ng-model="gameModel.gameName" placeholder={{translation.GameName}} autofocus/>
 
-                <input type="text" class="form-control" required data-ng-model="gameModel.gameName" placeholder={{translation.GameName}} autofocus />
-                <textarea style="margin-top: 20px" class="form-control" rows="14" required data-ng-model="gameModel.gameDetails" placeholder={{translation.GameDetails}}></textarea>
-                <div class="form-group">
+                    <!--GAME DESCRIPTION-->
+                    <textarea style="margin-top: 20px" class="form-control" rows="14" required data-ng-model="gameModel.gameDetails" placeholder={{translation.GameDetails}}></textarea>
+
+                    <!--code below is f...-->
+                    <!--GAME FEATURES-->
+                    <div ng-repeat="featureDetail in featuresToFilter() | filter:filterFeatures">
+                        <label ng-hide="featureDetail.gameFeatureId != 1">
+                            {{translation.GameCategory}}
+                            {{test(1)}}
+                        </label>
+                        <label ng-hide="featureDetail.gameFeatureId != 2">
+                            {{translation.PaceOfPlay}}
+                            {{test(2)}}
+                        </label>
+                        <label ng-hide="featureDetail.gameFeatureId != 3">
+                            {{translation.NumberOfPlayer}}
+                            {{test(3)}}
+                        </label>
+                        <label ng-hide="featureDetail.gameFeatureId != 4">
+                            {{translation.PreparationFun}}
+                            {{test(4)}}
+                        </label>
+                        <select class="form-control" required data-ng-model="gameModel.features[$index]" data-ng-options="g.gameFeatureDetailId as g.gameFeatureDetailName for g in gameFeatureDetails | filter:{gameFeatureId: featureDetail.gameFeatureId}">
+                            <option value=''>
+                                {{featureDetail.gameFeatureId == 1 ? translation.SelectCategoryForGame : ''}}
+                                {{featureDetail.gameFeatureId == 2 ? translation.SelectPaceOfTheGame : ''}}
+                                {{featureDetail.gameFeatureId == 3 ? translation.SelectNumberOfPlayerForTheGame : ''}}
+                                {{featureDetail.gameFeatureId == 4 ? translation.SelectPreparationGame : ''}}
+                            </option>
+                        </select>
+                    </div>
+
+                    <!--SAVE GAME-->
+                    <div style="text-align: center">
+                        <button class="btn btn-primary btn-block" type="submit" ng-disabled="addGame.$invalid"><span class="glyphicon glyphicon-save"></span> {{translation.AddGame}}</button>
+                    </div>
+                </div>
+
+                <!--<div ng-repeat="(key,value) in gameFeatureDetails | groupBy:'gameFeatureId'">
+                    group id {{key}}
+                    <div class="form-group">
+                        {{value.gameFeatureDetail.gameFeatureId}}
+                        {{value.gameFeatureDetail.gameFeatureDetailName}}
+                        {{value.gameFeatureId}}
+                        {{value.gameFeatureDetailName}}
+                        <select class="form-control" required data-ng-model="{{value.gameFeatureId}}" data-ng-options="gf.gameFeatureDetailName gf in value">
+                            <option value=''>{{translation.SelectCategoryForGame}}</option>
+                        </select>
+                    </div>
+                </div>-->
+                <!--<div class="form-group">
                     <label for="gameCategory">{{translation.GameCategory}}</label>
                     <select id="gameCategory" class="form-control" required data-ng-model="gameModel.gameCategory" data-ng-options="category.id as category.gameCategoryName for category in gameCategories">
                         <option value=''>{{translation.SelectCategoryForGame}}</option>
@@ -49,13 +99,10 @@
                     <select id="preparationFun" class="form-control" required data-ng-model="gameModel.preparationFun" data-ng-options="preparationFun.id as preparationFun.preparationFunName for preparationFun in preparationFuns">
                         <option value=''>{{translation.SelectPreparationGame}}</option>
                     </select>
-                </div>
-                <div style="text-align: center">
-                    <button class="btn btn-primary btn-block" type="submit" ng-disabled="addGame.$invalid"><span class="glyphicon glyphicon-save"></span> {{translation.AddGame}}</button>
-                </div>
+                </div>-->
+               
             </form>
         </div>
-
 
         <div class="col-md-6" ng-hide="!integrationGamePanel">
             <!--LANG FOR INTEGRATION GAMES-->
@@ -68,63 +115,69 @@
             </div>
 
             <!--GAME FEATURES-->
-            <label style="text-align: left;margin-bottom: 10px" ng-hide="gameFeatures[0].gameFeatureTemplateName == null">
-                {{translation.FeatureDescription}}
-            </label>
-            <div class="has-error">
-                <div class="checkbox">
-                    <label style="font-weight: bold">
-                        <input required data-ng-model="required1.val1" value="{{required1.val}}" type="checkbox" id="checkboxWarning" />
-                        {{translation.IKnowWhatIAmDoing}}
-                    </label>
-                </div>
-            </div>
-            <div ng-repeat="gameFeature in gameFeatures">
-                <div class="form-inline">
-                    <form class="form-group" novalidate ng-submit="editGameFeature(gameFeature)">
-                        <input ng-disabled=" required1.val1 == null" type="text" class="form-control" required data-ng-model="gameFeature.gameFeatureName" />
-                        <button type="submit" ng-disabled="!gameFeature.gameFeatureName.length || required1.val1 == null" class="btn btn-danger">{{translation.Save}}</button>
-                        <label ng-hide="gameFeature.gameFeatureTemplateName == null">
-                            {{gameFeature.gameFeatureTemplateName}}
+            <div ng-hide="gameFeature.language == null">
+                <label style="text-align: left;margin-bottom: 10px" ng-hide="gameFeatures[0].gameFeatureTemplateName == null">
+                    {{translation.FeatureDescription}}
+                </label>
+                <div class="has-error">
+                    <div class="checkbox">
+                        <label style="font-weight: bold">
+                            <input required data-ng-model="required1.val1" value="{{required1.val}}" type="checkbox" id="checkboxWarning" />
+                            {{translation.IKnowWhatIAmDoing}}
                         </label>
-                    </form>
+                    </div>
                 </div>
-            </div>
+                <div ng-repeat="gameFeature in gameFeatures">
+                    <div class="form-inline">
+                        <form class="form-group" novalidate ng-submit="editGameFeature(gameFeature)">
+                            <input ng-disabled=" required1.val1 == null" type="text" class="form-control" required data-ng-model="gameFeature.gameFeatureName"/>
+                            <button type="submit" ng-disabled="!gameFeature.gameFeatureName.length || required1.val1 == null" class="btn btn-danger">{{translation.Save}}</button>
+                            <label ng-hide="gameFeature.gameFeatureTemplateName == null">
+                                {{gameFeature.gameFeatureTemplateName}}
+                            </label>
+                        </form>
+                    </div>
+                </div>
 
+                <!--GAME FEATURES DETAIL SELECT-->
+                <h1>{{translation.FeaturesDetails}}</h1>
+                <div class="form-group">
+                    <label for="details">{{translation.Details}}</label>
+                    <select id="details" class="form-control" data-ng-model="gameFeature.featureId" data-ng-options="gameFeature.id as gameFeature.gameFeatureName for gameFeature in gameFeatures">
+                        <option value=''>{{translation.SelectDetail}}</option>
+                    </select>
+                </div>
+
+            </div>
             <!--GAME FEATURES DETAILS-->
-            <h1>{{translation.FeaturesDetails}}</h1>
-            <div class="form-group">
-                <label for="details">{{translation.Details}}</label>
-                <select id="details" class="form-control" data-ng-model="gameFeature.featureId" data-ng-change="fillGameFeatureDetails(gameFeature.featureId)" data-ng-options="gameFeature.id as gameFeature.gameFeatureName for gameFeature in gameFeatures">
-                    <option value=''>{{translation.SelectDetail}}</option>
-                </select>
-            </div>
-            <div class="has-error">
-                <div class="checkbox">
-                    <label style="font-weight: bold">
-                        <input required data-ng-model="required2.val1" value="{{required1.val}}" type="checkbox"/>
-                        {{translation.IKnowWhatIAmDoing}}
-                    </label>
-                </div>
-            </div>
-
-            <div ng-repeat="gameFeatureDetail in gameFeatureDetails">
-                <div class="form-inline">
-                    <form class="form-group" name="gfdForm{{gameFeatureDetail.Id}}" novalidate ng-submit="editGameFeatureDetail(gameFeature,gameFeatureDetail)">
-                        <input ng-disabled="!gameFeatureDetail.Name.length || required2.val1 == null" type="text" class="form-control" required data-ng-model="gameFeatureDetail.Name" />
-                        <button class="btn btn-danger" ng-disabled="gfdForm{{gameFeatureDetail.Id}}.$invalid || !gameFeatureDetail.Name.length || required2.val1 == null">{{translation.Save}}</button>
-                        <label ng-hide="gameFeatureDetail.TemplateName == null">
-                            {{gameFeatureDetail.TemplateName}}
+            <div ng-hide="gameFeature.language == null || gameFeature.featureId == null">
+                <div class="has-error">
+                    <div class="checkbox">
+                        <label style="font-weight: bold">
+                            <input required data-ng-model="required2.val1" value="{{required1.val}}" type="checkbox" />
+                            {{translation.IKnowWhatIAmDoing}}
                         </label>
-                    </form>
+                    </div>
                 </div>
+
+                <div ng-show="gameFeature.featureId > 0" ng-repeat="gameFeatureDetail in gameFeatureDetails | filter:{gameFeatureId : gameFeature.featureId} ">
+                    <div class="form-inline">
+                        <form class="form-group" name="gfdForm{{gameFeatureDetail.Id}}" novalidate ng-submit="editGameFeatureDetail(gameFeatureDetail)">
+                            <input ng-disabled="!gameFeatureDetail.gameFeatureDetailName.length || required2.val1 == null" type="text" class="form-control" required data-ng-model="gameFeatureDetail.gameFeatureDetailName" />
+                            <button class="btn btn-danger" ng-disabled="gfdForm{{gameFeatureDetail.Id}}.$invalid || !gameFeatureDetail.gameFeatureDetailName.length || required2.val1 == null">{{translation.Save}}</button>
+                            <label ng-hide="gameFeatureDetail.gameFeatureDetailTemplateName == null">
+                                {{gameFeatureDetail.gameFeatureDetailTemplateName}}
+                            </label>
+                        </form>
+                    </div>
+                </div>
+
+
+                <form class="form-inline" name="newGameFeatureDetail" novalidate ng-submit="newFeatureDetail(gameFeature)">
+                    <input type="text" class="form-control" required data-ng-model="gameFeature.newFeatureName" />
+                    <button class="btn btn-primary" type="submit" ng-disabled="newGameFeatureDetail.$invalid">dodaj nowa podkategorie</button>
+                </form>
             </div>
-
-
-            <form class="form-inline" name="newGameFeatureDetail" novalidate ng-submit="newFeatureDetail(gameFeature)">
-                <input type="text" class="form-control"  required data-ng-model="gameFeature.newFeatureName" />
-                <button class="btn btn-primary" type="submit" ng-disabled="newGameFeatureDetail.$invalid">dodaj nowa podkategorie</button>
-            </form>
         </div>
         <!--</div>-->
     </div>
@@ -137,12 +190,11 @@
                 <div>
                     <div>
                         <h1>{{g.gameName}}</h1>
-                        <p>{{g.gameDetails}}</p>
+                        <p>{{g.gameDescription}}</p>
                         <p></p>
-                        <p>{{g.gameCategory}}</p>
-                        <p>{{g.paceOfPlay}}</p>
-                        <p>{{g.preparationFun}}</p>
-                        <p>{{g.numberOfPlayer}}</p>
+                        <div ng-repeat="gf in g.integrationGameDetailModels">
+                            <p>{{gf.gameFeatureName}} : {{gf.gameFeatureDetailName}}</p>
+                        </div>
                     </div>
                 </div>
             </div>
