--- a/WebBellwether.Web/app/views/managementIntegrationGames.html
+++ b/WebBellwether.Web/app/views/managementIntegrationGames.html
@@ -62,6 +62,12 @@
                     <div style="text-align: center">
                         <button class="btn btn-primary btn-block" type="submit" ng-disabled="addGame.$invalid"><span class="glyphicon glyphicon-save"></span> {{translation.AddGame}}</button>
                     </div>
+                    <div ng-show="resultStateNewGame == 1">
+                        <h1 class="text-center" style="color: #60a917">{{translation.GameAdded}} </h1>
+                    </div>
+                    <div ng-show="resultStateNewGame == 2">
+                        <h1 class="text-center" style="color: #ce352c">{{translation.GameExists}}</h1>
+                    </div>
                 </div>
 
                 <!--<div ng-repeat="(key,value) in gameFeatureDetails | groupBy:'gameFeatureId'">
@@ -130,7 +136,7 @@
                 <div ng-repeat="gameFeature in gameFeatures">
                     <div class="form-inline">
                         <form class="form-group" novalidate ng-submit="editGameFeature(gameFeature)">
-                            <input ng-disabled=" required1.val1 == null" type="text" class="form-control" required data-ng-model="gameFeature.gameFeatureName"/>
+                            <input ng-class="getClass(gameFeature.id,0)" ng-disabled=" required1.val1 == null" type="text" class="form-control" required data-ng-model="gameFeature.gameFeatureName"/>
                             <button type="submit" ng-disabled="!gameFeature.gameFeatureName.length || required1.val1 == null" class="btn btn-danger">{{translation.Save}}</button>
                             <label ng-hide="gameFeature.gameFeatureTemplateName == null">
                                 {{gameFeature.gameFeatureTemplateName}}
@@ -163,7 +169,7 @@
                 <div ng-show="gameFeature.featureId > 0" ng-repeat="gameFeatureDetail in gameFeatureDetails | filter:{gameFeatureId : gameFeature.featureId} ">
                     <div class="form-inline">
                         <form class="form-group" name="gfdForm{{gameFeatureDetail.Id}}" novalidate ng-submit="editGameFeatureDetail(gameFeatureDetail)">
-                            <input ng-disabled="!gameFeatureDetail.gameFeatureDetailName.length || required2.val1 == null" type="text" class="form-control" required data-ng-model="gameFeatureDetail.gameFeatureDetailName" />
+                            <input ng-class="getClass(0,gameFeatureDetail.id)" ng-disabled="!gameFeatureDetail.gameFeatureDetailName.length || required2.val1 == null" type="text" class="form-control" required data-ng-model="gameFeatureDetail.gameFeatureDetailName" />
                             <button class="btn btn-danger" ng-disabled="gfdForm{{gameFeatureDetail.Id}}.$invalid || !gameFeatureDetail.gameFeatureDetailName.length || required2.val1 == null">{{translation.Save}}</button>
                             <label ng-hide="gameFeatureDetail.gameFeatureDetailTemplateName == null">
                                 {{gameFeatureDetail.gameFeatureDetailTemplateName}}
@@ -173,10 +179,10 @@
                 </div>
 
 
-                <form class="form-inline" name="newGameFeatureDetail" novalidate ng-submit="newFeatureDetail(gameFeature)">
+                <!--<form class="form-inline" name="newGameFeatureDetail" novalidate ng-submit="newFeatureDetail(gameFeature)">
                     <input type="text" class="form-control" required data-ng-model="gameFeature.newFeatureName" />
                     <button class="btn btn-primary" type="submit" ng-disabled="newGameFeatureDetail.$invalid">dodaj nowa podkategorie</button>
-                </form>
+                </form>-->
             </div>
         </div>
         <!--</div>-->
