repair integration games for several languages now only 1 translation for 1 languages for 1 game , and checkbox reset gameid on click

--- a/WebBellwether.Web/app/views/managementIntegrationGames.html
+++ b/WebBellwether.Web/app/views/managementIntegrationGames.html
@@ -28,7 +28,7 @@
                     <div class="has-error">
                         <div class="checkbox">
                             <label style="font-weight: bold">
-                                <input data-ng-model="severalLanguagesForGame" type="checkbox"/>
+                                <input ng-click="setSeveralLanguage()" type="checkbox"/>
                                 {{translation.GameForSeveralLanguages}}
                             </label>
                         </div>
