--- a/WebBellwether.Web/app/views/header.html
+++ b/WebBellwether.Web/app/views/header.html
@@ -14,7 +14,7 @@
         <div style="height: 50px!important">
             <div style="text-align: center">          
                 <ul class="nav nav-pills" style="display: inline-block">
-                    <li><a href="#/" class="navHeaderColor">Home</a></li>
+                    <li><a href="#/home" class="navHeaderColor">Home</a></li>
                     <li>
                         <div class="navHeaderColor">{{translation.Language}}</div>
                         <div class="dropdown dropdown-lg">
