--- a/WebBellwether.Web/app/views/header.html
+++ b/WebBellwether.Web/app/views/header.html
@@ -1,9 +1,11 @@
 ﻿<header class="main-header">
     <h1>
         <a href="#/">
-            <img src="/appData/images/logo/BigBLogoLightR.png" style="width: 150px;height: 150px; margin-bottom: -20px ;margin-top: -10px" />
+            <img src="/appData/images/logo/BigBLogoLightR.png" style="width: 150px; height: 150px; margin-bottom: -20px; margin-top: -10px"/>
         </a>
     </h1>
+
+
     <div class="imageContainer" style="background-image: url(/appData/images/header/23nR.png)">
         <div data-ng-hide="!authentication.isAuth" style="color: white; text-align: center; margin-top:300px;font-weight: bold">
             {{translation.HaveFun}} {{authentication.userName}}
@@ -19,49 +21,18 @@
                         <div class="navHeaderColor">{{translation.Language}}</div>
                         <div class="dropdown dropdown-lg">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"></button>
-                            <div class="dropdown-menu dropdown-menu-center animated flipInX" role="menu" style="background:rgba(255,255,255,.9) ; max-width: 200px!important">
+                            <div class="dropdown-menu dropdown-menu-center " role="menu" style="background: rgba(255, 255, 255, .9); max-width: 200px !important">
                                 <form class=" form-horizontal" role="form">
                                     <!--<section>
-                                            <select class="form-control" data-ng-change="translate(selectedLanguage)" data-ng-model="selectedLanguage">
-                                                <option value="en">English</option>
-                                                <option value="pl">Polish</option>
-                                            </select>
-                                        </section>-->
+                                        <select class="form-control" data-ng-change="translate(selectedLanguage)" data-ng-model="selectedLanguage">
+                                            <option value="en">English</option>
+                                            <option value="pl">Polish</option>
+                                        </select>
+                                    </section>-->
                                     <select class="form-control" data-ng-model="selectedLanguage" data-ng-change="translate(selectedLanguage)" data-ng-options="language.id as language.languageName for language in languages">
                                         <option value=''>{{translation.ChooseLanguage}}</option>
                                     </select>
                                 </form>
-                            </div>
-                        </div>
-                    </li>
-                    <li data-ng-hide="authentication.userName != 'Admin'">
-                        <div class="col-md-12">
-                            <div class="navHeaderColor">{{translation.Tools}}</div>
-                            <div class="dropdown dropdown-lg">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"></button>
-                                <div class="dropdown-menu dropdown-menu-center" role="menu" style="text-align: center; background:rgba(255,255,255,.9)">
-
-                                    <div class="list-group">
-                                        <a href="#/managementIntegrationGames" class="list-group-item">{{translation.ManagementGames}}</a>
-                                        <a href="#/managementJokes" class="list-group-item">{{translation.ManagementJokes}}</a>
-                                        <a href="#/tokens" class="list-group-item">{{translation.ManagementAccounts}}</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div> 
-                    </li>
-                    <li data-ng-hide="!authentication.isAuth"><a href="" data-ng-click="logOut()" style="color:white;font-weight: bold">{{translation.LogOut}}</a></li>
-                    <li data-ng-hide="authentication.isAuth">
-                        <div class="col-md-12">
-                            <div class="navHeaderColor">{{translation.Login}}</div>
-                            <div class="dropdown dropdown-lg">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"></button>
-                                <div class="dropdown-menu dropdown-menu-center animated flipInX" role="menu" style="text-align: center; background:rgba(255,255,255,.9)">
-
-                                    <div ng-include src="'/app/views/authentication.html'"></div>
-
-                                </div>
                             </div>
                         </div>
                     </li>
@@ -70,7 +41,7 @@
                             <div class="navHeaderColor">{{translation.Search}}</div>
                             <div class="dropdown dropdown-lg">
                                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"></button>
-                                <div class="dropdown-menu dropdown-menu-center animated flipInX" role="menu" style="background:rgba(255,255,255,.9)">
+                                <div class="dropdown-menu dropdown-menu-center" role="menu" style="background:rgba(255,255,255,.9)">
                                     <form class=" form-horizontal" role="form">
                                         <div class="form-group">
                                             <div class="input-group" id="adv-search">
@@ -106,6 +77,38 @@
                             </div>
                         </div>
                     </li>
+                    <li data-ng-hide="authentication.userName != 'Admin'">
+                        <div class="col-md-12">
+                            <div class="navHeaderColor">{{translation.Tools}}</div>
+                            <div class="dropdown dropdown-lg">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"></button>
+                                <div class="dropdown-menu dropdown-menu-center" role="menu" style="text-align: center; background:rgba(255,255,255,.9)">
+
+                                    <div class="list-group">
+                                        <a href="#/managementIntegrationGames" class="list-group-item">{{translation.ManagementGames}}</a>
+                                        <a href="#/managementJokes" class="list-group-item">{{translation.ManagementJokes}}</a>
+                                        <a href="#/tokens" class="list-group-item">{{translation.ManagementAccounts}}</a>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div> 
+                    </li>
+                    <li data-ng-hide="!authentication.isAuth"><a href="" data-ng-click="logOut()" style="color:white;font-weight: bold">{{translation.LogOut}}</a></li>
+                    <li data-ng-hide="authentication.isAuth">
+                        <div class="col-md-12">
+                            <div class="navHeaderColor">{{translation.Login}}</div>
+                            <div class="dropdown dropdown-lg">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"></button>
+                                <div class="dropdown-menu dropdown-menu-center" role="menu" style="text-align: center; background:rgba(255,255,255,.9)">
+
+                                    <div ng-include src="'/app/views/authentication.html'"></div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    
                 </ul>
             </div>
         </div>
