--- a/WebBellwether.Web/app/views/integrationGames.html
+++ b/WebBellwether.Web/app/views/integrationGames.html
@@ -1,4 +1,5 @@
 ﻿<div class="container">
+    <h1>{{translation.IntegrationGamesHeader}}</h1>
     <div class="row">
         <div ng-repeat="g in integrationGames | startFrom:currentPage*pageSize | limitTo:pageSize">
             <div class="animatedParent col-md-6">
@@ -11,9 +12,8 @@
             </div>
         </div>
     </div>
-    <!--PAGER CONTROL-->
-    <div class="row">
-        <div class="col-md-12 text-center">
+    <!--PAGER CONTROL-->    
+        <div class="text-center">
             <nav>
                 <ul class="pager">
                     <li ng-hide="currentPage==0" ng-click="currentPage=currentPage-1;goToTop()"><a href="">{{translation.Previous}}</a></li>
@@ -22,5 +22,5 @@
                 </ul>
             </nav>
         </div>
-    </div>
+    
 </div>
